# handbrakecloud

./: .gitignore  .stestr.conf  README.rst  requirements.txt  setup.cfg  test-requirements.txt  tox.ini
handbrakecloud/: daemon.py  exceptions.py  manager.py  runner.py  schema.py  utils.py  worker.py
handbrakecloud/playbooks/: delete_worker.yaml  deploy_node.yaml  run_handbrake.yaml
handbrakecloud/tests/: base.py  test_schema.py  test_utils.py
