[metadata]
name = handbrakecloud
summary = Tools to dynamically manage a queue of transcoding jobs using handbrake
description-file =
    README.rst
author = Matthew Treinish
author-email = mtreinish@kortar.org
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6

[files]
packages =
    handbrakecloud

[entry_points]
console_scipts =
    handbrakecloud = handbrakecloud.daemon:main

[build_sphinx]
source-dir = doc/source
build-dir = doc/build
all_files = 1

[upload_sphinx]
upload-dir = doc/build/html

[compile_catalog]
directory = handbrakecloud/locale
domain = handbrakecloud

[update_catalog]
domain = handbrakecloud
output_dir = handbrakecloud/locale
input_file = handbrakecloud/locale/handbrakecloud.pot

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = handbrakecloud/locale/handbrakecloud.pot

[build_releasenotes]
all_files = 1
build-dir = releasenotes/build
source-dir = releasenotes/source
